Fix paywall search UX and UI on smaller screen size

--- a/assets/src/scss/layout.scss
+++ b/assets/src/scss/layout.scss
@@ -92,6 +92,11 @@ body {
 	display: none;
 }
 
+.blury {
+	opacity: 0.5;
+	z-index: -1;
+}
+
 #wpfooter {
 	display: none;
 }
