--- a/assets/src/scss/pages/dashboard.scss
+++ b/assets/src/scss/pages/dashboard.scss
@@ -75,10 +75,10 @@
 			flex-direction: column;
 			background: #fff;
 			align-self: center;
-			width: 25%;
+			width: inherit;
 			box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.55);
-			position: fixed;
-			top: 75px;
+			position: absolute;
+			top: 45px;
 			z-index: 5;
 			height: 100px;
 
@@ -86,7 +86,6 @@
 				height: 20px;
 				cursor: pointer;
 				margin: 2px;
-				padding-left: 25px;
 			}
 		}
 	}
@@ -313,6 +312,34 @@
 
 			&-info {
 				width: 50%;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 1280px) and (max-width: 1300px) {
+	.rev-gen-dashboard-content {
+		&-paywall {
+			&-preview {
+				width: 35%;
+			}
+
+			&-info {
+				width: 65%;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 1600px) and (max-width: 2048px) {
+	.rev-gen-dashboard-content {
+		&-paywall {
+			&-preview {
+				width: 25%;
+			}
+
+			&-info {
+				width: 70%;
 			}
 		}
 	}
