--- a/assets/src/scss/pages/preview.scss
+++ b/assets/src/scss/pages/preview.scss
@@ -220,11 +220,6 @@
 		}
 	}
 
-	.blury {
-		opacity: 0.5;
-		z-index: -1;
-	}
-
 	.blur-content {
 		filter: blur(5px);
 		opacity: 0.5;
